--- a/SaleManager.Web/packages.config
+++ b/SaleManager.Web/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net47" />
   <package id="AutoMapper" version="9.0.0" targetFramework="net47" />
   <package id="bootstrap" version="4.4.1" targetFramework="net47" />
+  <package id="bootstrap.less" version="3.3.5" targetFramework="net47" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net47" />
   <package id="jQuery" version="3.4.1" targetFramework="net47" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net47" />
@@ -18,6 +19,7 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net47" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Modernizr" version="2.8.3" targetFramework="net47" />
+  <package id="Moment.js" version="2.9.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net47" />
   <package id="popper.js" version="1.16.0" targetFramework="net47" />
   <package id="WebGrease" version="1.6.0" targetFramework="net47" />
