--- a/SaleManager.Web/SaleManager.Web.csproj
+++ b/SaleManager.Web/SaleManager.Web.csproj
@@ -242,6 +242,7 @@
     <Content Include="Content\category.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\product.css" />
+    <Content Include="Content\sellMarket.css" />
     <Content Include="Content\supplier.css" />
     <Content Include="Entities\SaleManager.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
