--- a/SaleManager.Web/Views/Web.config
+++ b/SaleManager.Web/Views/Web.config
@@ -40,4 +40,8 @@
       </assemblies>
     </compilation>
   </system.web>
+
+  <system.web>
+    <globalization uiCulture="auto" culture="auto"/>
+  </system.web>
 </configuration>
