--- a/SaleManager.Web/Web.config
+++ b/SaleManager.Web/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -65,7 +65,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="SaleManagerEntities" connectionString="metadata=res://*/Entities.SaleManager.csdl|res://*/Entities.SaleManager.ssdl|res://*/Entities.SaleManager.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=test001;initial catalog=HungTest;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SaleManagerEntities" connectionString="metadata=res://*/Entities.SaleManager.csdl|res://*/Entities.SaleManager.ssdl|res://*/Entities.SaleManager.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-4JSH259;initial catalog=HungTest;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
