--- a/SaleManager.Web/SaleManager.Web.csproj
+++ b/SaleManager.Web/SaleManager.Web.csproj
@@ -225,6 +225,7 @@
     <Compile Include="Models\ActionParamModel.cs" />
     <Compile Include="Models\CategoryModel.cs" />
     <Compile Include="Models\ProductModel.cs" />
+    <Compile Include="Models\SellModel.cs" />
     <Compile Include="Models\SupplierModel.cs" />
     <Compile Include="Models\UploadPartialModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
